--- a/source/pages/blog/index.pug
+++ b/source/pages/blog/index.pug
@@ -28,7 +28,7 @@ block content
                 .user__avatar.avatar
                     img(class=`avatar__img` src=require(`./../../images/user-avatar.jpg`))
 
-                h1.user__title.heading.heading_font_2.heading_transform_uppercase.text.text_color_white.text_xs-size_35.text_size_63 Блог
+                h1.user__title.heading.heading_font_2.heading_transform_uppercase.heading_color_white.heading_xs-size_35.heading_size_63 Блог
 
                 p.user__text.text.text_color_white Статьи, которые я написал
 
