--- a/source/pages/portfolio/index.pug
+++ b/source/pages/portfolio/index.pug
@@ -32,7 +32,7 @@ block content
                 .user__avatar.avatar
                     img(class=`avatar__img` src=require(`./../../images/user-avatar.jpg`))
 
-                h1.user__title.heading.text.text_color_white.text_size_35.text_xs-size_21.text_weight_500 Владимир Астахов
+                h1.user__title.heading.heading_color_white.heading_size_35.heading_xs-size_21.heading_weight_500 Владимир Астахов
 
                 p.user__text.text.text_color_white Личный сайт веб разработчика
 
@@ -49,7 +49,7 @@ block content
             .page-works__title
                 .page-works__title-bg
                     svg(class=`page-works__title-bg-img` viewBox=svgStars2.viewBox): use(xlink:href=svgStars2.symbol)
-                h1.about__title.heading.heading_font_2.text.text_transform_uppercase.text_size_63.text_sm-size_49.text_xs-size_35.text_color_white Мои работы
+                h1.about__title.heading.heading_font_2.heading_transform_uppercase.heading_size_63.heading_sm-size_49.heading_xs-size_35.heading_color_white Мои работы
 
             #section-works.section.works__slider.combo-slider
                 ul.slider-data
@@ -78,7 +78,7 @@ block content
                 .combo-slider__main-slider.carousel
 
                 .combo-slider__slide-info 
-                    h4.combo-slider__slide-title.heading.heading_font_2.heading_decor_border-spacer.text.text_transform_uppercase.text_size_35.text_xs-size_21 Сайт школы онлайн образования
+                    h4.combo-slider__slide-title.heading.heading_font_2.heading_transform_uppercase.heading_size_35.heading_xs-size_21.heading_decor_border-spacer Сайт школы онлайн образования
                     ul.combo-slider__work-features.work-features
                         li.work-features__item HTML
                         li.work-features__item CSS
@@ -105,7 +105,7 @@ block content
                     .quotes__heading-bg
                         svg(class=`quotes__heading-bg-img` viewBox=svgStars3.viewBox): use(xlink:href=svgStars3.symbol)
 
-                    h3.quotes__title.heading.heading_font_2.text.text_transform_uppercase.text_size_63.text_sm-size_49.text_xs-size_35.text_color_white Что обо мне говорят
+                    h3.quotes__title.heading.heading_font_2.heading_transform_uppercase.heading_size_63.heading_sm-size_49.heading_xs-size_35.heading_color_white Что обо мне говорят
                     
                     ul.quotes__list
                         li.quotes__item.quote.text.text_color_white.text_style_italic
@@ -127,7 +127,7 @@ block content
                         .blur__panel
                         form(name=`contact` class=`form form_theme_transparent` novalidate autocomplete=`off`)
                             .form__body
-                                h4.form__title.heading.heading_font_2.heading_decor_border-spacer.text.text_transform_uppercase.text_size_35.text_sm-size_30.text_xs-size_21 Связаться со мной
+                                h4.form__title.heading.heading_font_2.heading_transform_uppercase.heading_size_35.heading_sm-size_30.heading_xs-size_21.heading_decor_border-spacer Связаться со мной
 
                                 label.form__field.textfield.textfield_color_white.formfield
                                     span.textfield__wrapper
