--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -25,7 +25,7 @@ block content
                         .user__avatar.avatar
                             img(class=`avatar__img` src=require(`./../../images/user-avatar.jpg`))
 
-                        h1.user__title.heading.text.text_color_white.text_size_28.text_xs-size_21.text_weight_500 Владимир Астахов
+                        h1.user__title.heading.heading_color_white.heading_size_28.heading_xs-size_21.heading_weight_500 Владимир Астахов
 
                         p.user__text.text.text_color_white Личный сайт веб разработчика
 
@@ -74,7 +74,7 @@ block content
             form(name=`auth` class=`flip-panel__side flip-panel__side_side_back` novalidate)
                 .flip-panel__content
                     .flip-panel__body.login
-                        span.login__title.heading.heading_font_2.text.text_size_35.text_color_white.text_transform_uppercase Авторизуйтесь
+                        span.login__title.heading.heading_font_2.heading_size_35.heading_color_white.heading_transform_uppercase Авторизуйтесь
                         
                         label.login__login.textfield.formfield
                             span.textfield__addon
