--- a/source/components/combo-slider/style.scss
+++ b/source/components/combo-slider/style.scss
@@ -95,6 +95,8 @@
 
         @include media-xs {
             max-width: 90%;
+            font-size: 26px;
+            line-height: 26px;
         }
 
         @include media-sm {
