--- a/source/components/textfield/style.scss
+++ b/source/components/textfield/style.scss
@@ -11,14 +11,12 @@
 
     &__wrapper {
         position: relative;
-        flex-grow: 1;
-        flex-shrink: 0;
+        flex: 1 0 auto;
     }
 
     &__addon {
         display: flex;
-        flex-grow: 0;
-        flex-shrink: 0;
+        flex: 0 0 auto;
         width: 45px;
         height: 45px;
         background-color: #f0efe9;
