--- a/source/components/combo-slider/style.scss
+++ b/source/components/combo-slider/style.scss
@@ -5,6 +5,7 @@
 @import '~Scss/mixins';
 
 @import '~Components/text-fx/style';
+@import '~Components/btn/style';
 
 .combo-slider {
     display: flex;
